Wiped some pesky layout bugs

--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,18 @@ html, body {
   padding: 0;
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
 }
 
 .root {
   display: flex;
+}
+
+.container {
+  margin: .2rem;
+  padding: .4rem;
 }
