--- a/src/modules/navbar/navbar.styles.scss
+++ b/src/modules/navbar/navbar.styles.scss
@@ -5,9 +5,9 @@
     justify-content: space-between;
     position: sticky;
     border: 1px solid gray;
+    background-color: whitesmoke;
     top: 0;
     left: 0;
-    width: 100%;
     height: 10%;
     z-index: 999;
     margin: .2rem;
@@ -22,7 +22,6 @@
 
     .title {
         display: flex;
-        margin-right: 1rem;
     }
 
 
@@ -46,10 +45,8 @@
 
     .logo {
         max-height: 2rem;
+        max-width: 2rem;
     }
 
-    .searchfield {
-        display: flex!important;
-        align-self: center;
-    }
+
 }
